# fetcher

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/fetcher/: __init__.py  __main__.py  fetch.py  http.py  response.py  trace.py
src/fetcher/cli/: __init__.py
tests/: __init__.py  test_fetch_integration.py  test_http.py
