[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fetcher"
dynamic = ["version"]
description = "An implementation of the Javascript fetch API in Python"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "sneakypete81", email = "sneakypete81@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click~=8.1",
]

[project.urls]
Documentation = "https://github.com/sneakypete81/fetcher#readme"
Issues = "https://github.com/sneakypete81/fetcher/issues"
Source = "https://github.com/sneakypete81/fetcher"

[project.scripts]
fetcher = "fetcher.cli:fetcher"

[tool.hatch.version]
path = "src/fetcher/__about__.py"

[tool.hatch.envs.default]
dependencies = []

[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.dev]
dependencies = [
  "black~=23.3",
  "coverage[toml]~=7.2",
  "mypy~=1.0",
  "pyhamcrest~=2.0",
  "pytest~=7.3",
  "pytest-asyncio~=0.21.0",
  "ruff==0.0.270",
]
[tool.hatch.envs.dev.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]
typing = "mypy --install-types --non-interactive {args:src/fetcher tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
lint = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py37"]
line-length = 120

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = []

[tool.ruff.isort]
known-first-party = ["fetcher"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["fetcher", "tests"]
branch = true
parallel = true
omit = [
  "src/fetcher/__about__.py",
]

[tool.coverage.paths]
fetcher = ["src/fetcher", "*/fetcher/src/fetcher"]
tests = ["tests", "*/fetcher/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
